Name:           haskell-awk
Version:        1.1
Author:         Mario Pastorelli <pastorelli.mario@gmail.com>,  Samuel Gélineau <gelisam@gmail.com>
Maintainer:     Mario Pastorelli <pastorelli.mario@gmail.com>,  Samuel Gélineau <gelisam@gmail.com>
Synopsis:       Transform text from the command-line using Haskell expressions.
Description:    Hawk is a command line utility to process streams of text
                using Haskell code. It is intended to be used in a UNIX
                pipeline. It offers a configuration system to personalize
                imported modules and a way to represent values on the console.
Category:       Console
License:        Apache-2.0
License-File:   LICENSE
Build-Type:     Custom
Cabal-version:  >=1.10
Extra-Source-Files: README.md
                  , src/*.hs
                  , src/Control/Monad/Trans/*.hs
                  , src/Control/Monad/Trans/State/*.hs
                  , src/Data/*.hs
                  , src/Data/HaskellModule/*.hs
                  , src/Data/Monoid/*.hs
                  , src/Language/Haskell/Exts/*.hs
                  , src/System/Console/*.hs
                  , src/System/Console/Hawk/*.hs
                  , src/System/Console/Hawk/Args/*.hs
                  , src/System/Console/Hawk/Context/*.hs
                  , src/System/Console/Hawk/UserPrelude/*.hs
                  , src/System/Directory/*.hs
                  , tests/*.hs
                  , tests/Data/HaskellModule/Parse/*.hs
                  , tests/System/Console/Hawk/*.hs
                  , tests/System/Console/Hawk/Lock/*.hs
                  , tests/System/Console/Hawk/Representable/*.hs
                  , tests/preludes/default/*.hs
                  , tests/preludes/moduleName/*.hs
                  , tests/preludes/moduleNamedMain/*.hs
                  , tests/preludes/readme/*.hs
                  , tests/preludes/set/*.hs

Source-Repository head
    type: git
    location: https://github.com/gelisam/hawk

Executable hawk
    Main-is:        Main.hs
    Default-Language: Haskell98
    ghc-options:    -Wall
    build-depends:  base >=4.6.0.1 && <5
                  , containers
                  , directory
                  , easy-file
                  , exceptions >=0.1
                  , filepath
                  , haskell-awk
                  , haskell-src-exts >=1.14.0
                  , hint >=0.3.3.5
                  , MonadCatchIO-mtl >=0.2.0.0
                  , mtl >=2.1.2
                  , network >=2.3.1.0
                  , process
                  , text
                  , text-format
                  , time
                  , transformers >=0.3.0.0
    hs-source-dirs: src

Library
    exposed-modules: System.Console.Hawk.Args.Spec
                    ,System.Console.Hawk.Representable
                    ,System.Console.Hawk.Runtime
                    ,System.Console.Hawk.Runtime.Base
    ghc-options:    -Wall
    hs-source-dirs: runtime
    build-depends: base >=4.6.0.1
                 , containers
                 , text
    Default-Language: Haskell98

Test-suite reference
  Hs-Source-Dirs:       src,tests
  Main-Is:              RunTests.hs
  Type:                 exitcode-stdio-1.0
  Ghc-Options:          -Wall
  Build-Depends:        base >=4.6.0.1 && <5
                      , containers
                      , directory
                      , doctest >=0.3.0
                      , exceptions >=0.1
                      , test-framework >=0.1
                      , test-framework-hunit >=0.2.0
                      , temporary >=1.0
                      , text
                      , text-format
                      , haskell-awk
                      , hspec >=0.2.0
                      , HUnit >=1.1
                      , easy-file
                      , haskell-src-exts >=1.14.0
                      , hint >=0.3.3.5
                      , filepath
                      , mtl >=2.1.2
                      , network >=2.3.1.0
                      , process
                      , time
                      , transformers >=0.3.0.0
  Default-Language: Haskell98
