Name:           hsprocess
Version:        0.2
Author:         Mario Pastorelli
Maintainer:     pastorelli.mario@gmail.com
Synopsis:       The Haskell Stream Processor command line utility
Description:    The Haskell Stream Processor command line utility
License:        GPL-3
License-File:   LICENSE
Build-Type:     Simple
Cabal-version:  >=1.10
Extra-Source-Files: src/HSProcess.hs
                  , src/HSProcess/*.hs
                  , README.md
                  , tests/HSProcess/Representable/Test.hs

Source-Repository head
    type: git
    location: https://github.com/melrief/HSProcess

Executable hsp
    Main-is:        Main.hs
    Default-Language: Haskell98
    ghc-options:    -Wall -O2
    build-depends:  base >= 4 && < 5
                  , bytestring
                  , containers
                  , directory
                  , easy-file
                  , filepath
                  , hint
                  , MonadCatchIO-mtl
                  , stringsearch
                  , process
                  , time
    hs-source-dirs: src

Library
    exposed-modules: HSProcess.Representable
    ghc-options:    -Wall -O2 
    hs-source-dirs: src
    build-depends: base
                 , bytestring
                 , containers
    Default-Language: Haskell98

Test-suite reference
  Hs-Source-Dirs:       src,tests
  Main-Is:              RunTests.hs
  Type:                 exitcode-stdio-1.0

  Build-Depends:        base, bytestring, containers
  Ghc-Options:          -Wall
  Build-Depends:        bytestring
                      , test-framework
                      , test-framework-hunit
                      , hspec
                      , HUnit
                      , QuickCheck
  Default-Language: Haskell98
